fixed spacing issues with the home page

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -109,7 +109,7 @@ a {
 
 
 .homeVideo{
-    object-fit: cover;
+    object-fit: fill;
     width: 100%;
     height: 35vh;
     margin: 0;
@@ -141,10 +141,11 @@ a {
 }
 
 .slideShowSection{
-    width: 900vw;
-    height: 105vh;
+    width: 95%;
+    height: 90vh;
     background-color: white;
     overflow: hidden;
+    margin-left: 2%;
 }
 
 .slideShowText{
@@ -164,9 +165,9 @@ a {
 
 .theSlideShow{
     object-fit: contain;
-    height: 51vh;
-    width: auto;
-    margin-left: 5vw;
+    height: 50%;
+    width: 90%;
+    margin-left: 5%;
     border-radius: 25px;
 }
 
